src/index.css
/* ... */
/* .figure  {{{2 */
/* Common  {{{3 */

.figure-caption {
  color: var(--gray-7);
}

.figure:where(.is-table, .is-html) > .figure-body {
  overflow-x: auto;
}

.figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar {
  inline-size: calc(var(--line-feed) / 2);
  block-size: calc(var(--line-feed) / 2);
}

.figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  background-color: var(--gray-10);
  border: 2px solid transparent;
}

/* Link  {{{3 */

.figure-body > a {
  display: block;
  padding: calc(var(--line-feed) / 2 - 2px);
  text-decoration: none;
  color: inherit;
  border: 1px solid var(--link-border-color, var(--gray-5));
  border-radius: var(--basic-border-radius);
  box-shadow: 2px 2px var(--link-shadow-color, var(--gray-3));
  font-family: var(--font-display);
  font-weight: bold;
}

.figure-body > a:hover {
  --link-border-color: var(--red-6);
  --link-shadow-color: var(--red-3);
}

.figure-body > a[data-domain]::after {
  content: attr(data-domain);
  display: block;
  padding-inline-start: calc(16px + 0.5ch);
  font-size: var(--font-size-small);
  font-weight: normal;
  overflow-wrap: anywhere;
  color: var(--gray-7);
  background-image: var(--favicon);
  background-repeat: no-repeat;
  background-size: 16px 16px;
  background-position: left center;
}

/* Code  {{{3 */

.figure.is-code {
  --r: var(--basic-border-radius);
  position: relative;
  counter-increment: code-count;
}

.figure.is-code > .figure-caption::before {
  content: 'Source ' counter(code-count) '. ';
}

.figure.is-code[data-language]::before {
  content: attr(data-language);
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: calc(var(--line-feed) / 2);
  padding-block: 2px;
  padding-inline: 1ch;
  border-inline: var(--r) solid #0000;
  border-radius: 0 0 calc(2 * var(--r)) calc(2 * var(--r)) / var(--r);
  mask: radial-gradient(var(--r) at var(--r) var(--r), #0000 99%, #000 101%)
          calc(-1 * var(--r)) 0 / 100% var(--r) repeat-x,
        conic-gradient(#000 0 0) padding-box;
  -webkit-mask: radial-gradient(var(--r) at var(--r) var(--r), #0000 99%, #000 101%)
                  calc(-1 * var(--r)) 0 / 100% var(--r) repeat-x,
                conic-gradient(#000 0 0) padding-box;
  color: var(--code-label-color, var(--gray-10));
  background-color: var(--code-label-background-color, var(--gray-4));
  font-family: var(--font-display);
  font-weight: bold;
  font-size: var(--font-size-xx-small);
  line-height: 1.0;
}

.figure-body > pre {
  padding: calc(var(--line-feed) / 2);
  margin-block-end: 0;
  color: var(--gray-10);
  background-color: var(--code-background-color, var(--gray-2));
  border-radius: var(--r);
  overflow-x: auto;
  overflow-x: overlay;
}

.figure-body > pre::-webkit-scrollbar {
  inline-size: calc(var(--line-feed) / 2);
  block-size: calc(var(--line-feed) / 2);
}

.figure-body > pre::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  background-color: var(--gray-6);
  border: 2px solid transparent;
  border-radius: calc(var(--line-feed) / 4);
}

.figure-body > pre > code {
  all: unset;
}

/* Blockquote  {{{3 */

.figure-body > blockquote {
  --blockquote-symbol-color: var(--red-6);
  --blockquote-symbol-size: 2.5rem;
  --blockquote-border-color: var(--red-5);
  --blockquote-background-color: var(--red-2);
  position: relative;
  margin-block-end: 0;
  padding: var(--line-feed);
  background-color: var(--blockquote-background-color);
  background-image: linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color)),
                    linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color)),
                    linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color)),
                    linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color));
  background-position: top left, top right, bottom left, bottom right;
  background-size: var(--line-feed) 1px,
                   calc(100% - var(--line-feed) - var(--blockquote-symbol-size)) 1px,
                   calc(100% - var(--line-feed) - var(--blockquote-symbol-size)) 1px,
                   var(--line-feed) 1px;
  background-repeat: no-repeat;
}

.figure-body > blockquote::before,
.figure-body > blockquote::after {
  position: absolute;
  inline-size: var(--blockquote-symbol-size);
  box-sizing: border-box;
  color: var(--blockquote-symbol-color);
  font-size: var(--blockquote-symbol-size);
  font-weight: bold;
  text-align: center;
}

.figure-body > blockquote::before {
  content: '\201c';
  inset-block-start: 0;
  inset-inline-start: var(--line-feed);
  transform: translateY(-25%);
}

.figure-body > blockquote::after {
  content: '\201d';
  inset-block-end: 0;
  inset-inline-end: var(--line-feed);
  transform: translateY(75%);
}

.figure-body > blockquote > :last-child {
  margin-block-end: 0;
}

/* Table  {{{3 */

.figure.is-table {
  counter-increment: table-count;
}

.figure.is-table > .figure-caption::before {
  content: 'Table ' counter(table-count) '. ';
}

.figure-body > table {
  max-inline-size: 100%;
  margin-block-end: 0;
  margin-inline: auto;
  font-size: var(--font-size-small);
}

.figure-body > table > tr > :is(td, th),
.figure-body > table > :is(tbody, thead, tfoot) > tr > :is(td, th) {
  padding-block: calc(var(--line-feed) / 4);
  padding-inline: 1ch;
  border: 0 solid var(--gray-10);
}

.figure-body > table > tr > th,
.figure-body > table > :is(tbody, thead, tfoot) > tr > th {
  vertical-align: bottom;
}

.figure-body > table > tr > td,
.figure-body > table > :is(tbody, thead, tfoot) > tr > td {
  vertical-align: top;
}

.figure-body > table > thead > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 2px);
  border-block-end-width: 2px;
}

.figure-body > table > tr > :is(td, th),
.figure-body > table > tbody > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 1px);
  border-block-end-width: 1px;
}
/* ... */

